added updated tabes with API execute button

--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
 
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 
+    <style>
+        .material-icons {
+            cursor: pointer;
+            border-radius: 5pt;
+            padding: 3pt;
+        }
+
+        .material-icons:hover {
+            color: white;
+            background-color: red;
+            padding: 3pt;
+        }
+    </style>
+
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
@@ -27,10 +41,10 @@
 
 <div id="tabs">
     <ul class="tabHeader">
-        <li><a href="#tabs-discovery">Discover avalaible end-points</a></li>
+        <li><a href="#tabs-info">Discover avalaible end-points</a></li>
     </ul>
-    <div id="tabs-discovery">
-        <p>To discover available endpoints naivage to <a target="_discover" href="api/">ROOT</a> endpoint, or see the adjacent tabs for the previously discovered end-points</p>
+    <div id="tabs-info">
+        <p>To discover available endpoints navigate to <a target="_discover" href="api/">ROOT</a> endpoint, or see the adjacent tabs for the previously discovered end-points</p>
     </div>
 
 </div>
