--- a/index.html
+++ b/index.html
@@ -41,10 +41,21 @@
 
 <div id="tabs">
     <ul class="tabHeader">
-        <li><a href="#tabs-info">Discover avalaible end-points</a></li>
+        <li><a href="#tabs-info">Information</a></li>
     </ul>
     <div id="tabs-info">
         <p>To discover available endpoints navigate to <a target="_discover" href="api/">ROOT</a> endpoint, or see the adjacent tabs for the previously discovered end-points</p>
+        <table border="0">
+            <tr>
+                <td><a title="open the Travis CI build results" target="_travis" href="https://travis-ci.org/afakes/afakes-myob-devops"><img style="height: 100px; width: 100px" src="https://cdn.worldvectorlogo.com/logos/travis-ci.svg"></a></td>
+                <td><a title="view the source code on GitHub"   target="_git"    href="https://github.com/afakes/afakes-myob-devops"><img style="height: 100px; width: 100px" src="https://assets-cdn.github.com/images/modules/logos_page/Octocat.png"></a></td>
+            </tr>
+            <tr>
+                <td><img title="live status of CI" src="https://travis-ci.org/afakes/afakes-myob-devops.svg?branch=master" alt="build:passed"></td>
+                <td></td>
+            </tr>
+        </table>
+
     </div>
 
 </div>
