--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <li><a href="#tabs-info">Information</a></li>
     </ul>
     <div id="tabs-info">
-        <p>To discover available endpoints navigate to <a target="_discover" href="api/">ROOT</a> endpoint, or see the adjacent tabs for the previously discovered end-points</p>
+        <p>To discover available endpoints navigate to <a target="_discover" href="api/">INDEX</a> endpoint, or other discovered end-points</p>
         <table border="0">
             <tr>
                 <td><a title="open the Travis CI build results" target="_travis" href="https://travis-ci.org/afakes/afakes-myob-devops"><img style="height: 100px; width: 100px" src="https://cdn.worldvectorlogo.com/logos/travis-ci.svg"></a></td>
